$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-11-04 [B] Fixed picture resizing via admin tools (thread ID 66802) {eenemeenemuu}
2010-11-04 [B] Removed value 'SERVER_PROTOCOL' from client ID generator (thread ID 59698) {eenemeenemuu}
2010-11-02 [C] Added label for 'remember me' checkbox (thread ID 67840) {eenemeenemuu}
2010-11-01 [B] Skip unknown file types during batch-add process (thread ID 67815) {eenemeenemuu}
2010-10-28 [B] Fixed issue with 'User Gallery Alphabetic Tabbing' plugin when bridged (thread ID 66905) {eenemeenemuu}
2010-10-22 [B] Fixed default selection of check boxes for batch-add (thread ID 67107) {eenemeenemuu}
2010-10-22 [B] If error occurs during batch-add, show error message and don't redirect automatically (thread ID 67392) {eenemeenemuu}
2010-10-14 [A] Added plugin hooks 'after_edit_file', 'upload_html_pre_move' and 'upload_swf_pre_move' (thread ID 60896) {eenemeenemuu}
2010-10-14 [C] Added additional submit button on top of 'Edit files' form (thread ID 67563) {eenemeenemuu}
2010-10-13 [B] Use IPTC headline instead of IPTC title as picture title according to docs (thread ID 61380) {eenemeenemuu}
2010-10-13 [B] Fixed implementation of plugin hook 'ip_information' (thread ID 67187) {eenemeenemuu}
2010-10-12 [B] Fixed last visit display in user manager when bridged with SMF2 (thread ID 67422) {eenemeenemuu}
2010-10-05 [D] Added partial Swedish documentation {GauGau}
2010-10-05 [O] Updated Swedish language file (previous version was mainly a Danish language file) {GauGau}
2010-10-03 [B] Fixed template placeholder bug that caused cut off tags {Nibbler}